# void_numerics

./: .clang-format  .gitignore  Benchmarks.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: Benchmark.yml  Sanitizers.yml
cmake/: installation_setup.cmake  library_setup.cmake
include/: void-numerics
include/vn-incl/: concepts.hpp  config.hpp  d_to_str.hpp  dragonbox.hpp  fast_float.h  i_to_str.hpp  str_to_d.hpp  str_to_i (2).hpp  str_to_i.hpp  tables.hpp  utility.hpp  zmij.hpp
src/benchmarks/: CMakeLists.txt  d_to_str.hpp  fast_float.h  i_to_str.hpp  str_to_i.hpp  utility.hpp  void_numerics.cpp  zmij.hpp
src/unit-tests/: CMakeLists.txt  charconv_test_helpers.hpp  i_to_str.hpp  llvm_floating_point_pass.hpp  llvm_integral_pass.hpp  llvm_roundtrip.hpp  llvm_to_chars.hpp  str_to_i.hpp  test_macros.hpp  utility.hpp  void_numerics.cpp
src/unit-tests/charconv.msvc/: double_fixed_precision_to_chars_test_cases_1.hpp  double_fixed_precision_to_chars_test_cases_2.hpp  double_fixed_precision_to_chars_test_cases_3.hpp  double_fixed_precision_to_chars_test_cases_4.hpp  double_from_chars_test_cases.hpp  double_general_precision_to_chars_test_cases.hpp  double_hex_precision_to_chars_test_cases.hpp  double_scientific_precision_to_chars_test_cases_1.hpp  double_scientific_precision_to_chars_test_cases_2.hpp  double_scientific_precision_to_chars_test_cases_3.hpp  double_scientific_precision_to_chars_test_cases_4.hpp  double_to_chars_test_cases.hpp  float_fixed_precision_to_chars_test_cases.hpp  float_from_chars_test_cases.hpp  float_general_precision_to_chars_test_cases.hpp  float_hex_precision_to_chars_test_cases.hpp  float_scientific_precision_to_chars_test_cases.hpp  float_to_chars_test_cases.hpp  floating_point_test_cases.hpp  test.hpp
